[gd_scene load_steps=12 format=3 uid="uid://dx3ad4si2dlfa"]

[ext_resource type="Theme" uid="uid://dui8cebqku8x5" path="res://interface/themes/olympic_theme.tres" id="1"]
[ext_resource type="FontFile" uid="uid://dprehv4eo4p4u" path="res://assets/fonts/Pixel-Powerline-440555/Pixel Powerline.otf" id="2"]
[ext_resource type="Script" uid="uid://dxenheyoccqim" path="res://ui/minigame_list/WorldButton.gd" id="3"]
[ext_resource type="Texture2D" uid="uid://x2sylnm067mh" path="res://assets/map/cards/planets/planet.png" id="4"]
[ext_resource type="Texture2D" uid="uid://dx0oad54tnaky" path="res://assets/map/ui/flag.png" id="5"]
[ext_resource type="Texture2D" uid="uid://j3wt2ow3ny55" path="res://assets/map/ui/flag_pole.png" id="6"]

[sub_resource type="FontFile" id="5"]
fallbacks = Array[Font]([ExtResource("2")])
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0

[sub_resource type="Animation" id="3"]
resource_name = "Float"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:position:y")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 2),
"transitions": PackedFloat32Array(-2, -2, -2),
"update": 0,
"values": [64.0, 53.0, 64.0]
}

[sub_resource type="Animation" id="4"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:position:y")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [64.0]
}

[sub_resource type="FontFile" id="2"]
fallbacks = Array[Font]([ExtResource("2")])
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0

[sub_resource type="FontFile" id="1"]
fallbacks = Array[Font]([ExtResource("2")])
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0

[node name="WorldButton" type="Button"]
unique_name_in_owner = true
offset_right = 350.0
offset_bottom = 170.0
custom_minimum_size = Vector2(350, 0)
size_flags_horizontal = 0
theme = ExtResource("1")
script = ExtResource("3")

[node name="Shadow" type="Sprite2D" parent="."]
modulate = Color(0, 0, 0, 0.235294)
position = Vector2(175, 74)
scale = Vector2(0.32, 0.32)
texture = ExtResource("4")

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(0.6, 0.6, 0.6, 1)
position = Vector2(175, 64)
scale = Vector2(0.32, 0.32)
texture = ExtResource("4")

[node name="Flag" type="Node2D" parent="Sprite2D"]
unique_name_in_owner = true
visible = false
position = Vector2(64.25, -266.875)

[node name="Pole" type="Sprite2D" parent="Sprite2D/Flag"]
position = Vector2(-62.5, 46.875)
texture = ExtResource("6")

[node name="Flag" type="Sprite2D" parent="Sprite2D/Flag"]
position = Vector2(33, 26.875)
texture = ExtResource("5")

[node name="Label" type="Label" parent="Sprite2D/Flag"]
offset_left = -36.0
offset_top = -2.0
offset_right = 82.0
offset_bottom = 96.0
theme = ExtResource("1")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = 0
theme_override_fonts/font = SubResource("5")
text = "PPP"
align = 1
uppercase = true

[node name="FloatAnimationPlayer" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
playback_speed = 2.0
anims/Float = SubResource("3")
anims/RESET = SubResource("4")

[node name="UnderLabel" type="Label" parent="."]
visible = false
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -44.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("1")
theme_override_colors/font_color = Color(1.11, 0.87, 0.37, 1)
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = 0
theme_override_fonts/font = SubResource("2")
text = "BUTTON"
align = 1

[node name="Label" type="Label" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -44.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("1")
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = 0
theme_override_fonts/font = SubResource("1")
text = "BUTTON"
align = 1

[connection signal="focus_entered" from="." to="." method="_on_WorldButton_focus_entered"]
[connection signal="focus_exited" from="." to="." method="_on_WorldButton_focus_exited"]
